@@ -37,8 +37,8 @@
 extern "C" {
 #endif
 typedef struct GWEN_WAITCALLBACK GWEN_WAITCALLBACK;
-GWEN_LIST_FUNCTION_DEFS(GWEN_WAITCALLBACK, GWEN_WaitCallback)
-GWEN_INHERIT_FUNCTION_DEFS(GWEN_WAITCALLBACK)
+GWEN_LIST_FUNCTION_LIB_DEFS(GWEN_WAITCALLBACK, GWEN_WaitCallback, GWENHYWFAR_API)
+GWEN_INHERIT_FUNCTION_LIB_DEFS(GWEN_WAITCALLBACK, GWENHYWFAR_API)
 /* No trailing semicolon here because this is a macro call */
 #ifdef __cplusplus
 }
