@@ -100,8 +100,8 @@ typedef enum {
 } GWEN_NETCONNECTION_WORKRESULT;
 
 
-GWEN_LIST_FUNCTION_DEFS(GWEN_NETCONNECTION, GWEN_NetConnection)
-GWEN_INHERIT_FUNCTION_DEFS(GWEN_NETCONNECTION)
+GWEN_LIST_FUNCTION_LIB_DEFS(GWEN_NETCONNECTION, GWEN_NetConnection, GWENHYWFAR_API)
+GWEN_INHERIT_FUNCTION_LIB_DEFS(GWEN_NETCONNECTION, GWENHYWFAR_API)
 /* No trailing semicolon here because this is a macro call */
 
 
