@@ -54,8 +54,8 @@ typedef enum {
 } GWEN_NETTRANSPORT_WORKRESULT;
 
 
-GWEN_LIST_FUNCTION_DEFS(GWEN_NETTRANSPORT, GWEN_NetTransport)
-GWEN_INHERIT_FUNCTION_DEFS(GWEN_NETTRANSPORT)
+GWEN_LIST_FUNCTION_LIB_DEFS(GWEN_NETTRANSPORT, GWEN_NetTransport, GWENHYWFAR_API)
+GWEN_INHERIT_FUNCTION_LIB_DEFS(GWEN_NETTRANSPORT, GWENHYWFAR_API)
 /* No trailing semicolon here because this is a macro call */
 
 
