@@ -66,8 +66,8 @@ extern "C" {
 #endif
 
 
-GWEN_LIST_FUNCTION_DEFS(GWEN_DBIO, GWEN_DBIO)
-GWEN_INHERIT_FUNCTION_DEFS(GWEN_DBIO)
+GWEN_LIST_FUNCTION_LIB_DEFS(GWEN_DBIO, GWEN_DBIO, GWENHYWFAR_API)
+GWEN_INHERIT_FUNCTION_LIB_DEFS(GWEN_DBIO, GWENHYWFAR_API)
 /* No trailing semicolon here because this is a macro call */
 
 
