@@ -130,7 +130,7 @@ int
 
 typedef struct GWEN__MSGENGINE GWEN_MSGENGINE;
 
-GWEN_INHERIT_FUNCTION_DEFS(GWEN_MSGENGINE)
+GWEN_INHERIT_FUNCTION_LIB_DEFS(GWEN_MSGENGINE, GWENHYWFAR_API)
 
 
 /** @name Virtual Functions
