@@ -20,7 +20,7 @@
 
 typedef struct GWEN_TLV GWEN_TLV;
 
-GWEN_LIST_FUNCTION_DEFS(GWEN_TLV, GWEN_TLV)
+GWEN_LIST_FUNCTION_LIB_DEFS(GWEN_TLV, GWEN_TLV, GWENHYWFAR_API)
 
 
 GWENHYWFAR_API
